# LinearProgramming

./: CMakeLists.txt  License.txt  README.md  main.c
iolibs/: CMakeLists.txt  ioctrl.c  ioctrl.h
linlibs/: CMakeLists.txt  simplex.c  simplex.h  twostage.c  twostage.h
